<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.example.android.quiz_final.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:src="@drawable/imgq" />


            <RadioGroup
                android:id="@+id/group1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/radiotext1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:text=""
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radio2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sigulda" />

                <RadioButton
                    android:id="@+id/radio3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/r_ga" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/group2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/radiotext2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:text=""
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radio4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/emeru_national_park" />

                <RadioButton
                    android:id="@+id/radio5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/gaujas_nationa_park" />

                <RadioButton
                    android:id="@+id/radio6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sl_teres_national_park" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/group3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/radiotext3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:text=""
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radio7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_89_329_km" />

                <RadioButton
                    android:id="@+id/radio8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_64_589_km" />

            </RadioGroup>

            <RadioGroup
                android:id="@+id/group4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/radiotext4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:text=""
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radio10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_170cm" />

                <RadioButton
                    android:id="@+id/radio11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_180cm" />

                <RadioButton
                    android:id="@+id/radio12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_160cm" />


            </RadioGroup>

            <RadioGroup
                android:id="@+id/group5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/radiotext5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:text=""
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radio13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_9" />

                <RadioButton
                    android:id="@+id/radio14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_3" />

                <RadioButton
                    android:id="@+id/radio15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_6" />

                <RadioButton
                    android:id="@+id/radio16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_12" />

                <Button
                    android:id="@+id/btnDisplay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:background="#89DA59"
                    android:text="@string/next" />

            </RadioGroup>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
