<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.example.android.quiz_final.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:src="@drawable/qp" />


            <RadioGroup
                android:id="@+id/group6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/radiotext6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:text=""
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radio20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hockey" />

                <RadioButton
                    android:id="@+id/radio21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:focusable="true"
                    android:text="@string/soccker" />

                <RadioButton
                    android:id="@+id/radio22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/volleyball" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/group7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/radiotext7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />


                <RadioButton
                    android:id="@+id/radio23"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:focusable="true"
                    android:text="@string/_50" />

                <RadioButton
                    android:id="@+id/radio24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_55" />


            </RadioGroup>

            <RadioGroup
                android:id="@+id/group8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/radiotext8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radio25"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:text="@string/milk" />

                <RadioButton
                    android:id="@+id/radio26"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:focusable="true"
                    android:text="@string/beer" />

            </RadioGroup>

            <RadioGroup
                android:id="@+id/group9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/radiotext9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radio27"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:text="@string/ventas_rumba" />

                <RadioButton
                    android:id="@+id/radio28"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:focusable="true"
                    android:text="@string/veldzes" />

                <RadioButton
                    android:id="@+id/radio29"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:focusable="true"
                    android:text="@string/abavas_rumba" />

            </RadioGroup>

            <RadioGroup
                android:id="@+id/group10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <TextView
                    android:id="@+id/radiotext10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radio30"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:text="@string/zigfr_ds_anna_merovics" />

                <RadioButton
                    android:id="@+id/radio31"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:focusable="true"
                    android:text="@string/imants_rundzins" />

                <RadioButton
                    android:id="@+id/radio32"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:focusable="true"
                    android:text="@string/jackob_draumalis" />

                <RadioButton
                    android:id="@+id/radio33"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:focusable="true"
                    android:text="@string/jacob_davis" />

                <Button
                    android:id="@+id/btnDisplay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="24dp"
                    android:layout_weight="1"
                    android:background="#89DA59"
                    android:focusable="true"
                    android:text="@string/next" />

            </RadioGroup>

        </LinearLayout>

    </LinearLayout>

</ScrollView>